--- a/_includes/css/agency.css
+++ b/_includes/css/agency.css
@@ -178,6 +178,7 @@ fieldset[disabled] .btn-xl.active {
 .navbar-default .navbar-brand {
     font-family: "Kaushan Script","Helvetica Neue",Helvetica,Arial,cursive;
     color: #{{ site.data.template.color.primary }};
+    padding: 5.5px 15px 20.5px;
 }
 
 .navbar-default .navbar-brand:hover,
