updated services icons

--- a/_includes/services.html
+++ b/_includes/services.html
@@ -39,7 +39,7 @@
                 <div class="col-md-4">
                     <span class="fa-stack fa-4x">
                         <i class="fa fa-circle fa-stack-2x text-primary"></i>
-                        <i class="fa fa-lightbulb fa-stack-1x fa-inverse"></i>
+                        <i class="fa fa-lightbulb-o fa-stack-1x fa-inverse"></i>
                     </span>
                     <h4 class="service-heading">Concept</h4>
                     <p class="text-muted">Outline proposal.</p>
@@ -47,7 +47,7 @@
                 <div class="col-md-4">
                     <span class="fa-stack fa-4x">
                         <i class="fa fa-circle fa-stack-2x text-primary"></i>
-                        <i class="fa fa-camera fa-stack-1x fa-inverse"></i>
+                        <i class="fa fa-crosshairs fa-stack-1x fa-inverse"></i>
                     </span>
                     <h4 class="service-heading">Challenge</h4>
                     <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>
@@ -55,10 +55,62 @@
                 <div class="col-md-4">
                     <span class="fa-stack fa-4x">
                         <i class="fa fa-circle fa-stack-2x text-primary"></i>
-                        <i class="fa fa-edit fa-stack-1x fa-inverse"></i>
+                        <i class="fa fa-users fa-stack-1x fa-inverse"></i>
                     </span>
                     <h4 class="service-heading">Workshop</h4>
                     <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>
+                </div>
+            </div>
+            <div class="row text-center">
+                <div class="col-md-4">
+                    <span class="fa-stack fa-4x">
+                        <i class="fa fa-circle fa-stack-2x text-primary"></i>
+                        <i class="fa fa-search fa-stack-1x fa-inverse"></i>
+                    </span>
+                    <h4 class="service-heading">Develop</h4>
+                    <p class="text-muted">Outline proposal.</p>
+                </div>
+                <div class="col-md-4">
+                    <span class="fa-stack fa-4x">
+                        <i class="fa fa-circle fa-stack-2x text-primary"></i>
+                        <i class="fa fa-map-signs fa-stack-1x fa-inverse"></i>
+                    </span>
+                    <h4 class="service-heading">Options</h4>
+                    <p class="text-muted"></p>
+                </div>
+                <div class="col-md-4">
+                    <span class="fa-stack fa-4x">
+                        <i class="fa fa-circle fa-stack-2x text-primary"></i>
+                        <i class="fa fa-television fa-stack-1x fa-inverse"></i>
+                    </span>
+                    <h4 class="service-heading">Present</h4>
+                    <p class="text-muted"></p>
+                </div>
+            </div>
+            <div class="row text-center">
+                <div class="col-md-4">
+                    <span class="fa-stack fa-4x">
+                        <i class="fa fa-circle fa-stack-2x text-primary"></i>
+                        <i class="fa fa-money fa-stack-1x fa-inverse"></i>
+                    </span>
+                    <h4 class="service-heading">Costs</h4>
+                    <p class="text-muted"></p>
+                </div>
+                <div class="col-md-4">
+                    <span class="fa-stack fa-4x">
+                        <i class="fa fa-circle fa-stack-2x text-primary"></i>
+                        <i class="fa fa-cogs fa-stack-1x fa-inverse"></i>
+                    </span>
+                    <h4 class="service-heading">Project Management</h4>
+                    <p class="text-muted"></p>
+                </div>
+                <div class="col-md-4">
+                    <span class="fa-stack fa-4x">
+                        <i class="fa fa-circle fa-stack-2x text-primary"></i>
+                        <i class="fa fa-truck fa-stack-1x fa-inverse"></i>
+                    </span>
+                    <h4 class="service-heading">Deliver</h4>
+                    <p class="text-muted"></p>
                 </div>
             </div>
         </div>
