--- a/_includes/services.html
+++ b/_includes/services.html
@@ -42,7 +42,7 @@
                         <i class="fa fa-crosshairs fa-stack-1x fa-inverse"></i>
                     </span>
                     <h4 class="service-heading">Challenge</h4>
-                    <p class="text-muted"></p>
+                    <p class="text-muted">Challenge current practices, and identify how they are relevant to your organisation.</p>
                 </div>
                 <div class="col-md-4">
                     <span class="fa-stack fa-4x">
@@ -50,7 +50,7 @@
                         <i class="fa fa-users fa-stack-1x fa-inverse"></i>
                     </span>
                     <h4 class="service-heading">Workshop</h4>
-                    <p class="text-muted"></p>
+                    <p class="text-muted">Explore the options, analyse the building and innovate the end users.</p>
                 </div>
                 <div class="col-md-4">
                     <span class="fa-stack fa-4x">
@@ -58,7 +58,7 @@
                         <i class="fa fa-lightbulb-o fa-stack-1x fa-inverse"></i>
                     </span>
                     <h4 class="service-heading">Concept</h4>
-                    <p class="text-muted">Outline proposal.</p>
+                    <p class="text-muted">Launch the big idea. Presenting the Initial Design Proposal.</p>
                 </div>
             </div>
             <div class="row text-center">
@@ -68,7 +68,7 @@
                         <i class="fa fa-map-signs fa-stack-1x fa-inverse"></i>
                     </span>
                     <h4 class="service-heading">Options</h4>
-                    <p class="text-muted"></p>
+                    <p class="text-muted">Capture the feedback, look at the details and refine the options.</p>
                 </div>
                 <div class="col-md-4">
                     <span class="fa-stack fa-4x">
@@ -76,7 +76,7 @@
                         <i class="fa fa-search fa-stack-1x fa-inverse"></i>
                     </span>
                     <h4 class="service-heading">Develop</h4>
-                    <p class="text-muted">Outline proposal.</p>
+                    <p class="text-muted">Build on the idea, look at the specifics and create a solution.</p>
                 </div>
                 <div class="col-md-4">
                     <span class="fa-stack fa-4x">
@@ -84,7 +84,7 @@
                         <i class="fa fa-television fa-stack-1x fa-inverse"></i>
                     </span>
                     <h4 class="service-heading">Present</h4>
-                    <p class="text-muted"></p>
+                    <p class="text-muted">Present the solution; agree relevant iteration of sign off before continuing further development of the scheme.</p>
                 </div>
             </div>
             <div class="row text-center">
@@ -94,7 +94,7 @@
                         <i class="fa fa-money fa-stack-1x fa-inverse"></i>
                     </span>
                     <h4 class="service-heading">Costs</h4>
-                    <p class="text-muted"></p>
+                    <p class="text-muted">Liaise with suppliers, balance the budget, analyse tender submissions, negotiate best price.</p>
                 </div>
                 <div class="col-md-4">
                     <span class="fa-stack fa-4x">
@@ -102,7 +102,7 @@
                         <i class="fa fa-cogs fa-stack-1x fa-inverse"></i>
                     </span>
                     <h4 class="service-heading">Project Management</h4>
-                    <p class="text-muted"></p>
+                    <p class="text-muted">Coordinate with specialist contractors, undertake sample reviews, organise mock-ups or pilot spaces.  Programme the delivery.</p>
                 </div>
                 <div class="col-md-4">
                     <span class="fa-stack fa-4x">
@@ -110,7 +110,7 @@
                         <i class="fa fa-truck fa-stack-1x fa-inverse"></i>
                     </span>
                     <h4 class="service-heading">Deliver</h4>
-                    <p class="text-muted"></p>
+                    <p class="text-muted">Carry out site management, highlight snagging issues and coordinate O&M manuals.  Undertake an end project review, with a lessons learned and future aspirations workshop.</p>
                 </div>
             </div>
         </div>
