updated alabout and experience

--- a/_includes/about.html
+++ b/_includes/about.html
@@ -3,11 +3,30 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <h2 class="section-heading">About</h2>
-                    <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
+                    <h2 class="section-heading">About Us</h2>
+                    <h3 class="section-subheading text-muted">EMU Interior Design Limited is a design consultancy that aims to assist in the creation of inspirational interiors.  We aim to provide our clients with interiors that not only contribute but reinforce a successful identity.  Our designs and interiors communicate the clients’ message, and deliver an experience to both internal and external stakeholders.  Through consultation our experienced designers can create environments that express the values and ambitions of any organisation whilst also perform against the defined user requirements.
+                        <br/>
+                        <br/>
+                            At EMU Interior Design Limited we put our clients’ core business at the centre of everything we do.  By focusing on their business goals and differentiating market qualities we can ensure the solution we provide creates the right impression for our clients business, connecting with their audience, and providing a clear message that means something to their staff, clients/students and visitors.
+                        <br/>
+                        <br/>    
+                            There are very few who do not appreciate the power of brand awareness and it is not rocket science or suspect psychology that leads us to believe that people work and learn best in a well-designed space.  EMU Interior Design Limited believes that through well-designed space they can increase morale and staff retention, improve productivity and the student experience, and provide great incentives for staff and student recruitment.</h3>
                 </div>
             </div>
             <div class="row">
+                <div class="col-lg-12 text-center">
+                    <h2 class="section-heading">Our Core Business</h2>
+                    <h3 class="section-subheading text-muted">
+                            Emu:ID specialises in the design and delivery of education and workplace interiors. 
+                        <br/>
+                        <br/>
+                            Libby Upson, owner and creative director, founded the company in 2012.  Prior to forming EMU:ID, Libby has worked successfully with clients through design and build contracts, traditional consultancy and as an in house interior specialist within a University.  Built on the foundation of the experience gained from working in these different capacities, EMU:ID has been set up as a small flexible and independent firm, offering a completely impartial and holistic service to their clients.  
+                        <br/>
+                        <br/>    
+                            Our clients range from end user Universities to furniture consultants and design and build firms to workplace strategic consultancies.  Working as part of your project team we are able to provide flexible services that add value and reduce risk.</h3>
+                </div>
+            </div>
+            <div class="row hide">
                 <div class="col-lg-12">
                     <ul class="timeline">
                         <li>
