--- a/_includes/team.html
+++ b/_includes/team.html
@@ -3,11 +3,14 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <h2 class="section-heading">Our Amazing Team</h2>
-                    <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
+                    <h2 class="section-heading">Director Experience</h2>
+                    <h3 class="section-subheading text-muted">Libby Upson is an ambitious and motivated Interior designer with considerable experience in both the education and commercial office fit out sectors. <br/><br/>
+                    Libby is a valued, reliable project leader; driven by the dedication to get the job done accurately, efficiently and with the utmost professionalism. <br/><br/>
+                    Through continued liaison with clients, contractors, consultants and suppliers Libby prides herself on being proficient at interpreting the brief and designing a solution that is both innovative and fit for purpose. <br/><br/>
+                    With a comprehensive knowledge of the design and furniture industry, Libby is able to develop and detail innovative design concepts that are cost effective and realistic. (Please see Directors Project Experience for more detailed information)</h3>
                 </div>
             </div>
-            <div class="row">
+            <div class="row hide">
                 {% for member in site.people %}
                 <div class="col-sm-4">
                     <div class="team-member">
@@ -28,7 +31,7 @@
                 </div>
                 {% endfor %}
             </div>
-            <div class="row">
+            <div class="row hide">
                 <div class="col-lg-8 col-lg-offset-2 text-center">
                     <p class="large text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut eaque, laboriosam veritatis, quos non quis ad perspiciatis, totam corporis ea, alias ut unde.</p>
                 </div>
