changed sections and about

--- a/_includes/about.html
+++ b/_includes/about.html
@@ -4,95 +4,13 @@
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <h2 class="section-heading">About Us</h2>
-                    <h3 class="section-subheading text-muted">EMU Interior Design Limited is a design consultancy that aims to assist in the creation of inspirational interiors.  We aim to provide our clients with interiors that not only contribute but reinforce a successful identity.  Our designs and interiors communicate the clients’ message, and deliver an experience to both internal and external stakeholders.  Through consultation our experienced designers can create environments that express the values and ambitions of any organisation whilst also perform against the defined user requirements.
+                    <h3 class="section-subheading text-muted">EMU Interior Design Limited is an independent design consultancy who specialise in the design and delivery of inspirational education and workplace interiors.
                         <br/>
                         <br/>
-                            At EMU Interior Design Limited we put our clients’ core business at the centre of everything we do.  By focusing on their business goals and differentiating market qualities we can ensure the solution we provide creates the right impression for our clients business, connecting with their audience, and providing a clear message that means something to their staff, clients/students and visitors.
-                        <br/>
-                        <br/>    
-                            There are very few who do not appreciate the power of brand awareness and it is not rocket science or suspect psychology that leads us to believe that people work and learn best in a well-designed space.  EMU Interior Design Limited believes that through well-designed space they can increase morale and staff retention, improve productivity and the student experience, and provide great incentives for staff and student recruitment.</h3>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-lg-12 text-center">
-                    <h2 class="section-heading">Our Core Business</h2>
-                    <h3 class="section-subheading text-muted">
-                            Emu:ID specialises in the design and delivery of education and workplace interiors. 
-                        <br/>
-                        <br/>
-                            Libby Upson, owner and creative director, founded the company in 2012.  Prior to forming EMU:ID, Libby has worked successfully with clients through design and build contracts, traditional consultancy and as an in house interior specialist within a University.  Built on the foundation of the experience gained from working in these different capacities, EMU:ID has been set up as a small flexible and independent firm, offering a completely impartial and holistic service to their clients.  
+                        People work and learn best in well designed space; our experienced designers identify not only the needs but also the potential of our clients and their space, working together we ensure our building designs are innovative, fit for purpose and future proofed.
                         <br/>
                         <br/>    
-                            Our clients range from end user Universities to furniture consultants and design and build firms to workplace strategic consultancies.  Working as part of your project team we are able to provide flexible services that add value and reduce risk.</h3>
-                </div>
-            </div>
-            <div class="row hide">
-                <div class="col-lg-12">
-                    <ul class="timeline">
-                        <li>
-                            <div class="timeline-image">
-                                <img class="img-circle img-responsive" src="img/about/1.jpg" alt="">
-                            </div>
-                            <div class="timeline-panel">
-                                <div class="timeline-heading">
-                                    <h4>2009-2011</h4>
-                                    <h4 class="subheading">Our Humble Beginnings</h4>
-                                </div>
-                                <div class="timeline-body">
-                                    <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed, incidunt et ea quo dolore laudantium consectetur!</p>
-                                </div>
-                            </div>
-                        </li>
-                        <li class="timeline-inverted">
-                            <div class="timeline-image">
-                                <img class="img-circle img-responsive" src="img/about/2.jpg" alt="">
-                            </div>
-                            <div class="timeline-panel">
-                                <div class="timeline-heading">
-                                    <h4>March 2011</h4>
-                                    <h4 class="subheading">An Agency is Born</h4>
-                                </div>
-                                <div class="timeline-body">
-                                    <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed, incidunt et ea quo dolore laudantium consectetur!</p>
-                                </div>
-                            </div>
-                        </li>
-                        <li>
-                            <div class="timeline-image">
-                                <img class="img-circle img-responsive" src="img/about/3.jpg" alt="">
-                            </div>
-                            <div class="timeline-panel">
-                                <div class="timeline-heading">
-                                    <h4>December 2012</h4>
-                                    <h4 class="subheading">Transition to Full Service</h4>
-                                </div>
-                                <div class="timeline-body">
-                                    <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed, incidunt et ea quo dolore laudantium consectetur!</p>
-                                </div>
-                            </div>
-                        </li>
-                        <li class="timeline-inverted">
-                            <div class="timeline-image">
-                                <img class="img-circle img-responsive" src="img/about/4.jpg" alt="">
-                            </div>
-                            <div class="timeline-panel">
-                                <div class="timeline-heading">
-                                    <h4>July 2014</h4>
-                                    <h4 class="subheading">Phase Two Expansion</h4>
-                                </div>
-                                <div class="timeline-body">
-                                    <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed, incidunt et ea quo dolore laudantium consectetur!</p>
-                                </div>
-                            </div>
-                        </li>
-                        <li class="timeline-inverted">
-                            <div class="timeline-image">
-                                <h4>Be Part
-                                    <br>Of Our
-                                    <br>Story!</h4>
-                            </div>
-                        </li>
-                    </ul>
+                        By developing a strategic vision for a new space we can create unique environments that encourage profitability, productivity and innovation for our clients.</h3>
                 </div>
             </div>
         </div>
