--- a/_includes/clients.html
+++ b/_includes/clients.html
@@ -1,25 +1,37 @@
 <!-- Clients Aside -->
-    <section id="clients">
+    <section id="clients" class="bg-light-gray">
         <div class="container">
+            <div class="row">
+                <div class="col-lg-12 text-center">
+                    <h2 class="section-heading">Clients</h2>
+                    <h3 class="section-subheading text-muted">EMU Interior Design has been set up as a small flexible and independent firm, offering a completely impartial and holistic design service to our clients.  
+                        <br/>
+                        <br/>
+                        In the past clients have ranged from commercial end users, strategic workplace consultants, Universities, furniture consultants and design and build firms.  
+                        <br/>
+                        <br/>
+                        Working as part of your project team we are able to provide flexible services that add value and reduce risk.</h3>
+                </div>
+            </div>
             <div class="row">
                 <div class="col-md-3 col-sm-6">
                     <a href="#">
-                        <img src="img/logos/envato.jpg" class="img-responsive img-centered" alt="">
+                        <img src="img/logos/ferword.png" class="img-responsive img-centered" alt="">
                     </a>
                 </div>
                 <div class="col-md-3 col-sm-6">
                     <a href="#">
-                        <img src="img/logos/designmodo.jpg" class="img-responsive img-centered" alt="">
+                        <img src="img/logos/solent.png" class="img-responsive img-centered" alt="">
                     </a>
                 </div>
                 <div class="col-md-3 col-sm-6">
                     <a href="#">
-                        <img src="img/logos/themeforest.jpg" class="img-responsive img-centered" alt="">
+                        <img src="img/logos/thinkinside.png" class="img-responsive img-centered" alt="">
                     </a>
                 </div>
                 <div class="col-md-3 col-sm-6">
                     <a href="#">
-                        <img src="img/logos/creative-market.jpg" class="img-responsive img-centered" alt="">
+                        <img src="img/logos/phoenix.png" class="img-responsive img-centered" alt="">
                     </a>
                 </div>
             </div>
