--- a/_includes/clients.html
+++ b/_includes/clients.html
@@ -16,7 +16,7 @@
             <div class="row">
                 <div class="col-md-3 col-sm-6">
                     <a href="#">
-                        <img src="img/logos/ferword.png" class="img-responsive img-centered" alt="">
+                        <img src="img/logos/ferwood.png" class="img-responsive img-centered" alt="">
                     </a>
                 </div>
                 <div class="col-md-3 col-sm-6">
