--- a/_includes/clients.html
+++ b/_includes/clients.html
@@ -13,6 +13,11 @@
                         Working as part of your project team we are able to provide flexible services that add value and reduce risk.</h3>
                 </div>
             </div>
+        </div>
+    </section>
+
+    <aside class="clients">
+        <div class="container">
             <div class="row">
                 <div class="col-md-3 col-sm-6">
                     <a href="#">
@@ -26,12 +31,12 @@
                 </div>
                 <div class="col-md-3 col-sm-6">
                     <a href="#">
-                        <img src="img/logos/thinkinside.png" class="img-responsive img-centered" alt="">
+                        <img src="img/logos/thinkforward.png" class="img-responsive img-centered" alt="">
                     </a>
                 </div>
                 <div class="col-md-3 col-sm-6">
                     <a href="#">
-                        <img src="img/logos/phoenix.png" class="img-responsive img-centered" alt="">
+                        <img src="img/logos/broadstock.png" class="img-responsive img-centered" alt="">
                     </a>
                 </div>
             </div>
