further client logo updates

--- a/_includes/clients.html
+++ b/_includes/clients.html
@@ -26,6 +26,11 @@
                 </div>
                 <div class="col-md-3 col-sm-6">
                     <a href="#">
+                        <img src="img/logos/thinkinside.png" class="img-responsive img-centered" alt="">
+                    </a>
+                </div>
+                <div class="col-md-3 col-sm-6">
+                    <a href="#">
                         <img src="img/logos/solent.png" class="img-responsive img-centered" alt="">
                     </a>
                 </div>
@@ -33,8 +38,20 @@
                     <a href="#">
                         <img src="img/logos/thinkforward.png" class="img-responsive img-centered" alt="">
                     </a>
+                </div>                
+            </div>
+            <div class="row">
+                <div class="col-md-4 col-sm-6">
+                    <a href="#">
+                        <img src="img/logos/cardpay.png" class="img-responsive img-centered" alt="">
+                    </a>
                 </div>
-                <div class="col-md-3 col-sm-6">
+                <div class="col-md-4 col-sm-6">
+                    <a href="#">
+                        <img src="img/logos/phoenix.png" class="img-responsive img-centered" alt="">
+                    </a>
+                </div>                
+                <div class="col-md-4 col-sm-6">
                     <a href="#">
                         <img src="img/logos/broadstock.png" class="img-responsive img-centered" alt="">
                     </a>
