--- a/_includes/css/agency.css
+++ b/_includes/css/agency.css
@@ -657,6 +657,13 @@ aside.clients img {
     margin: 50px auto;
 }
 
+aside#refrain {
+    background-color: #222;
+    background-image: url('{{ site.baseurl }}/img/DCK-house.jpg');
+    background-position: center;
+    background-repeat: no-repeat;
+}
+
 section#contact {
     background-color: #222;
     background-image: url('{{ site.baseurl }}/img/map-image.png');
