--- a/_includes/about.html
+++ b/_includes/about.html
@@ -16,8 +16,8 @@
         </div>
     </section>
 
-    <aside id="refrain">
+    <section id="refrain">
         <div class="container">
             <div class="row"></div>
         </div>
-    </aside>
+    </section>
