--- a/_includes/css/agency.css
+++ b/_includes/css/agency.css
@@ -660,8 +660,13 @@ aside.clients img {
 section#refrain {
     background-color: #222;
     background-image: url('{{ site.baseurl }}/img/DCK-house.jpg');
+    background-attachment: fixed;
     background-position: center;
     background-repeat: no-repeat;
+    background-size: cover;
+
+  /* Full height */
+  height: 100%;
 }
 
 section#contact {
