--- a/_includes/header.html
+++ b/_includes/header.html
@@ -47,7 +47,7 @@
     </nav>
 
     <!-- Header -->
-    <header>
+    <header class="parallax">
         <div class="container">
             <div class="intro-text">
                 <div class="intro-lead-in">Providing an Identity for your Interior</div>
