--- a/_includes/about.html
+++ b/_includes/about.html
@@ -16,7 +16,7 @@
         </div>
     </section>
 
-    <section id="refrain">
+    <section id="refrain" class="parallax">
         <div class="container">
             <div class="row"></div>
         </div>
