--- a/_includes/services.html
+++ b/_includes/services.html
@@ -4,114 +4,47 @@
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <h2 class="section-heading">Services</h2>
-                    <h3 class="section-subheading text-muted">Through the iterative design process, EMU:ID will ensure that options are tested and agreed whilst progressing through a project lifecycle. 
+                    <h3 class="section-subheading text-muted">Through the iterative design process, EMU Interior Design will ensure that options are tested and agreed whilst progressing through a project lifecycle.
                         <br/>
-                        Whether engaged with our clients in part, or the whole lifecycle, our expertise in achieving clear milestones will be beneficial to any building project.</h3>
+                        Whether engaged with our clients in part, or the whole life cycle, our expertise in achieving clear milestones will be beneficial to any building project.</h3>
                 </div>
             </div>
+            <div class="row">
+                <img src="img/services/main.png" class="img-responsive img-centered" alt="">
+            </div>
             <div class="row text-center">
-                <div class="col-md-4">
+                <div class="col-md-6">
                     <span class="fa-stack fa-4x">
                         <i class="fa fa-circle fa-stack-2x text-primary"></i>
                         <i class="fa fa-volume-up fa-stack-1x fa-inverse"></i>
                     </span>
-                    <h4 class="service-heading">Listen</h4>
-                    <p class="text-muted">Interview stakeholders and establish a clear vision.</p>
+                    <h4 class="service-heading">Prepare</h4>
+                    <p class="text-muted">Listen / Capture / Analyse</p>
                 </div>
-                <div class="col-md-4">
-                    <span class="fa-stack fa-4x">
-                        <i class="fa fa-circle fa-stack-2x text-primary"></i>
-                        <i class="fa fa-camera fa-stack-1x fa-inverse"></i>
-                    </span>
-                    <h4 class="service-heading">Capture</h4>
-                    <p class="text-muted">Observe current undertakings with space utilisation audits and legacy reviews.</p>
-                </div>
-                <div class="col-md-4">
-                    <span class="fa-stack fa-4x">
-                        <i class="fa fa-circle fa-stack-2x text-primary"></i>
-                        <i class="fa fa-edit fa-stack-1x fa-inverse"></i>
-                    </span>
-                    <h4 class="service-heading">Analyse</h4>
-                    <p class="text-muted">Benchmark findings and build the brief.</p>
-                </div>
-            </div>
-            <div class="row text-center">
-                <div class="col-md-4">
-                    <span class="fa-stack fa-4x">
-                        <i class="fa fa-circle fa-stack-2x text-primary"></i>
-                        <i class="fa fa-crosshairs fa-stack-1x fa-inverse"></i>
-                    </span>
-                    <h4 class="service-heading">Challenge</h4>
-                    <p class="text-muted">Challenge current practices, and identify how they are relevant to your organisation.</p>
-                </div>
-                <div class="col-md-4">
-                    <span class="fa-stack fa-4x">
-                        <i class="fa fa-circle fa-stack-2x text-primary"></i>
-                        <i class="fa fa-users fa-stack-1x fa-inverse"></i>
-                    </span>
-                    <h4 class="service-heading">Workshop</h4>
-                    <p class="text-muted">Explore the options, analyse the building and innovate the end users.</p>
-                </div>
-                <div class="col-md-4">
+                <div class="col-md-6">
                     <span class="fa-stack fa-4x">
                         <i class="fa fa-circle fa-stack-2x text-primary"></i>
                         <i class="fa fa-lightbulb-o fa-stack-1x fa-inverse"></i>
                     </span>
-                    <h4 class="service-heading">Concept</h4>
-                    <p class="text-muted">Launch the big idea. Presenting the Initial Design Proposal.</p>
+                    <h4 class="service-heading">Inspire</h4>
+                    <p class="text-muted">Challenge / Workshop / Concept</p>
                 </div>
-            </div>
-            <div class="row text-center">
-                <div class="col-md-4">
-                    <span class="fa-stack fa-4x">
-                        <i class="fa fa-circle fa-stack-2x text-primary"></i>
-                        <i class="fa fa-map-signs fa-stack-1x fa-inverse"></i>
-                    </span>
-                    <h4 class="service-heading">Options</h4>
-                    <p class="text-muted">Capture the feedback, look at the details and refine the options.</p>
-                </div>
-                <div class="col-md-4">
-                    <span class="fa-stack fa-4x">
-                        <i class="fa fa-circle fa-stack-2x text-primary"></i>
-                        <i class="fa fa-search fa-stack-1x fa-inverse"></i>
-                    </span>
-                    <h4 class="service-heading">Develop</h4>
-                    <p class="text-muted">Build on the idea, look at the specifics and create a solution.</p>
-                </div>
-                <div class="col-md-4">
-                    <span class="fa-stack fa-4x">
-                        <i class="fa fa-circle fa-stack-2x text-primary"></i>
-                        <i class="fa fa-television fa-stack-1x fa-inverse"></i>
-                    </span>
-                    <h4 class="service-heading">Present</h4>
-                    <p class="text-muted">Present the solution; agree relevant iteration of sign off before continuing further development of the scheme.</p>
-                </div>
-            </div>
-            <div class="row text-center">
-                <div class="col-md-4">
-                    <span class="fa-stack fa-4x">
-                        <i class="fa fa-circle fa-stack-2x text-primary"></i>
-                        <i class="fa fa-money fa-stack-1x fa-inverse"></i>
-                    </span>
-                    <h4 class="service-heading">Costs</h4>
-                    <p class="text-muted">Liaise with suppliers, balance the budget, analyse tender submissions, negotiate best price.</p>
-                </div>
-                <div class="col-md-4">
-                    <span class="fa-stack fa-4x">
-                        <i class="fa fa-circle fa-stack-2x text-primary"></i>
-                        <i class="fa fa-cogs fa-stack-1x fa-inverse"></i>
-                    </span>
-                    <h4 class="service-heading">Project Management</h4>
-                    <p class="text-muted">Coordinate with specialist contractors, undertake sample reviews, organise mock-ups or pilot spaces.  Programme the delivery.</p>
-                </div>
-                <div class="col-md-4">
+                <div class="col-md-6">
                     <span class="fa-stack fa-4x">
                         <i class="fa fa-circle fa-stack-2x text-primary"></i>
                         <i class="fa fa-truck fa-stack-1x fa-inverse"></i>
                     </span>
                     <h4 class="service-heading">Deliver</h4>
-                    <p class="text-muted">Carry out site management, highlight snagging issues and coordinate O&M manuals.  Undertake an end project review, with a lessons learned and future aspirations workshop.</p>
+                    <p class="text-muted">Project Management / Deliver</p>
+                </div>                
+                <div class="col-md-6">
+                    <span class="fa-stack fa-4x">
+                        <i class="fa fa-circle fa-stack-2x text-primary"></i>
+                        <i class="fa fa-edit fa-stack-1x fa-inverse"></i>
+                    </span>
+                    <h4 class="service-heading">Design</h4>
+                    <p class="text-muted">Options / Develop / Present / Costs</p>
                 </div>
-            </div>
+            </div>            
         </div>
     </section>
