add content to services

--- a/_includes/services.html
+++ b/_includes/services.html
@@ -1,5 +1,5 @@
 <!-- Services Section -->
-    <section id="services">
+    <section id="services" class="bg-light-gray">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
@@ -10,7 +10,9 @@
                 </div>
             </div>
             <div class="row">
-                <img src="img/services/main.png" class="img-responsive img-centered" alt="">
+                <div class="col-lg-12">
+                    <img src="img/services/main.png" class="img-responsive img-centered" alt="">
+                </div>
             </div>
             <div class="row text-center">
                 <div class="col-md-6">
@@ -20,6 +22,11 @@
                     </span>
                     <h4 class="service-heading">Prepare</h4>
                     <p class="text-muted">Listen / Capture / Analyse</p>
+                    <ul>
+                        <li>Interview Stakeholders and establish a clear vision</li>
+                        <li>Observe current undertakings with space utilisation audits</li>
+                        <li>Benchmark findings and build the brief</li>
+                    </ul>
                 </div>
                 <div class="col-md-6">
                     <span class="fa-stack fa-4x">
@@ -28,6 +35,11 @@
                     </span>
                     <h4 class="service-heading">Inspire</h4>
                     <p class="text-muted">Challenge / Workshop / Concept</p>
+                    <ul>
+                        <li>Challenge current practices and identify how they are relevant to your organisation</li>
+                        <li>Explore the options, analyse the building and innovate the end users</li>
+                        <li>Launch the big idea. Presenting the initial design proposal</li>
+                    </ul>
                 </div>
                 <div class="col-md-6">
                     <span class="fa-stack fa-4x">
@@ -36,6 +48,15 @@
                     </span>
                     <h4 class="service-heading">Deliver</h4>
                     <p class="text-muted">Project Management / Deliver</p>
+                    <ul>
+                        <li>Coordinate with specialist contractors</li>
+                        <li>Undertake sample reviews, organize mock ups or pilot spaces</li>
+                        <li>Programme the delivery</li>
+                        <li>On site presence</li>
+                        <li>Highlight snagging issues</li>
+                        <li>Co-ordinate O&M manuals</li>
+                        <li>Project review complete with lessons learned and future aspirations workshop</li>
+                    </ul>
                 </div>                
                 <div class="col-md-6">
                     <span class="fa-stack fa-4x">
@@ -44,6 +65,12 @@
                     </span>
                     <h4 class="service-heading">Design</h4>
                     <p class="text-muted">Options / Develop / Present / Costs</p>
+                    <ul>
+                        <li>Capture the feeback, look at the details and refine the options</li>
+                        <li>Build on the idea, look at the specifics and create a solution</li>
+                        <li>Present the solution; agree relevant iteration of sign off</li>
+                        <li>Liaise with suppliers, balance the budget, analyse tender submissions, negotiate best price</li>
+                    </ul>
                 </div>
             </div>            
         </div>
