--- a/_includes/services.html
+++ b/_includes/services.html
@@ -9,11 +9,19 @@
                         Whether engaged with our clients in part, or the whole life cycle, our expertise in achieving clear milestones will be beneficial to any building project.</h3>
                 </div>
             </div>
+        </div>
+    </section>
+    <aside>
+        <div class="container">
             <div class="row">
                 <div class="col-lg-12">
                     <img src="img/services/main.png" class="img-responsive img-centered" alt="">
                 </div>
             </div>
+        </div>
+    </aside>
+    <section id="sub-services" class="bg-light-gray">
+        <div class="container">
             <div class="row text-center">
                 <div class="col-md-6">
                     <span class="fa-stack fa-4x">
@@ -22,7 +30,7 @@
                     </span>
                     <h4 class="service-heading">Prepare</h4>
                     <p class="text-muted">Listen / Capture / Analyse</p>
-                    <ul>
+                    <ul class="text-left text-muted">
                         <li>Interview Stakeholders and establish a clear vision</li>
                         <li>Observe current undertakings with space utilisation audits</li>
                         <li>Benchmark findings and build the brief</li>
@@ -35,7 +43,7 @@
                     </span>
                     <h4 class="service-heading">Inspire</h4>
                     <p class="text-muted">Challenge / Workshop / Concept</p>
-                    <ul>
+                    <ul class="text-left text-muted">
                         <li>Challenge current practices and identify how they are relevant to your organisation</li>
                         <li>Explore the options, analyse the building and innovate the end users</li>
                         <li>Launch the big idea. Presenting the initial design proposal</li>
@@ -48,7 +56,7 @@
                     </span>
                     <h4 class="service-heading">Deliver</h4>
                     <p class="text-muted">Project Management / Deliver</p>
-                    <ul>
+                    <ul class="text-left text-muted">
                         <li>Coordinate with specialist contractors</li>
                         <li>Undertake sample reviews, organize mock ups or pilot spaces</li>
                         <li>Programme the delivery</li>
@@ -65,7 +73,7 @@
                     </span>
                     <h4 class="service-heading">Design</h4>
                     <p class="text-muted">Options / Develop / Present / Costs</p>
-                    <ul>
+                    <ul class="text-left text-muted">
                         <li>Capture the feeback, look at the details and refine the options</li>
                         <li>Build on the idea, look at the specifics and create a solution</li>
                         <li>Present the solution; agree relevant iteration of sign off</li>
