--- a/_includes/about.html
+++ b/_includes/about.html
@@ -4,13 +4,13 @@
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <h2 class="section-heading">About Us</h2>
-                    <h3 class="section-subheading text-muted">EMU Interior Design Limited is an independent design consultancy who specialise in the design and delivery of inspirational education and workplace interiors.
+                    <p class="section-subheading text-muted text-left">EMU Interior Design Limited is an independent design consultancy who specialise in the design and delivery of inspirational education and workplace interiors.
                         <br/>
                         <br/>
                         People work and learn best in well designed space; our experienced designers identify not only the needs but also the potential of our clients and their space, working together we ensure our building designs are innovative, fit for purpose and future proofed.
                         <br/>
                         <br/>    
-                        By developing a strategic vision for a new space we can create unique environments that encourage profitability, productivity and innovation for our clients.</h3>
+                        By developing a strategic vision for a new space we can create unique environments that encourage profitability, productivity and innovation for our clients.</p>
                 </div>
             </div>
         </div>
