--- a/_includes/clients.html
+++ b/_includes/clients.html
@@ -4,13 +4,13 @@
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <h2 class="section-heading">Clients</h2>
-                    <h3 class="section-subheading text-muted">EMU Interior Design has been set up as a small flexible and independent firm, offering a completely impartial and holistic design service to our clients.  
+                    <p class="section-subheading text-muted text-left">EMU Interior Design has been set up as a small flexible and independent firm, offering a completely impartial and holistic design service to our clients.  
                         <br/>
                         <br/>
                         In the past clients have ranged from commercial end users, strategic workplace consultants, Universities, furniture consultants and design and build firms.  
                         <br/>
                         <br/>
-                        Working as part of your project team we are able to provide flexible services that add value and reduce risk.</h3>
+                        Working as part of your project team we are able to provide flexible services that add value and reduce risk.</p>
                 </div>
             </div>
         </div>
