--- a/_includes/services.html
+++ b/_includes/services.html
@@ -4,9 +4,10 @@
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <h2 class="section-heading">Services</h2>
-                    <h3 class="section-subheading text-muted">Through the iterative design process, EMU Interior Design will ensure that options are tested and agreed whilst progressing through a project lifecycle.
+                    <p class="section-subheading text-muted text-left">Through the iterative design process, EMU Interior Design will ensure that options are tested and agreed whilst progressing through a project lifecycle.
                         <br/>
-                        Whether engaged with our clients in part, or the whole life cycle, our expertise in achieving clear milestones will be beneficial to any building project.</h3>
+                        <br/>
+                        Whether engaged with our clients in part, or the whole life cycle, our expertise in achieving clear milestones will be beneficial to any building project.</p>
                 </div>
             </div>
         </div>
