--- a/_includes/clients.html
+++ b/_includes/clients.html
@@ -1,5 +1,5 @@
 <!-- Clients Aside -->
-    <section id="clients" class="bg-light-gray">
+    <section id="clients" class="bg-light-gray section-linked-top">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
