--- a/_includes/services.html
+++ b/_includes/services.html
@@ -1,5 +1,5 @@
 <!-- Services Section -->
-    <section id="services" class="bg-light-gray">
+    <section id="services" class="bg-light-gray section-linked-top">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
@@ -15,13 +15,13 @@
     <aside>
         <div class="container">
             <div class="row">
-                <div class="col-lg-12">
+                <div class="col-lg-12 section-linked-middle">
                     <img src="img/services/main.png" class="img-responsive img-centered" alt="">
                 </div>
             </div>
         </div>
     </aside>
-    <section id="sub-services" class="bg-light-gray">
+    <section id="sub-services" class="bg-light-gray section-linked-bottom">
         <div class="container">
             <div class="row text-center">
                 <div class="col-md-6">
